Fixed issues with rcw-widget-container sizes and zIndex on small screens

--- a/client/src/Player/components/customstyle.css
+++ b/client/src/Player/components/customstyle.css
@@ -1,5 +1,23 @@
+
+@media only screen and (max-width: 800px) {
+  .rcw-widget-container {
+      height: fit-content;
+  }
+  .rcw-conversation-container .rcw-title {
+      padding: 15px 0 15px;
+  }
+
+  .rcw-conversation-container {
+      height: 0%;
+  }
+
+  .rcw-conversation-container.active {
+      height: 100vh;
+  }
+}
+
 .rcw-conversation-container {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .rcw-messages-container {
